--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
   <title>App del Clima</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <style>
-    /* Estilos personalizados para la animación del título */
+    /* Estilos personalizados para la animación del título, y que salte el titulo */
     .animated-title {
       text-align: center;
       margin-top: 50px;
@@ -74,7 +74,6 @@
         </tr>
       </table>
     </div>
-    <!-- Agrega esto para mostrar la imagen del clima -->
     <div id="clima-imagen" class="mt-4">
       <img src="" alt="Imagen del clima" id="imagen-clima">
     </div>
@@ -108,7 +107,7 @@
           // Obtén la temperatura actual
           const temperaturaActual = data.current.temperature;
 
-          // Obtén la imagen correspondiente según la temperatura
+          // Obtén la imagen correspondiente según la temperatura, falta implementar la url de las imagenes
           let imagenClima = '';
 
           if (temperaturaActual >= 0 && temperaturaActual <= 10) {
